# vaultx

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  config.py  create_tables.py  database.py  go.mod  main.py  models.py  pyproject.toml  requirements.txt  sameple.env  sample.env  schemas.py  test.py
backend/.secret/keys/: server_signing_key.pem  server_signing_key.pub
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/core/: audit_decorator.py  audit_log.py  audit_verify.py  config.py  deps.py  security.py  server_keys.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/routes/: audit.py  auth.py  files.py  search.py  shares.py  user.py
backend/app/services/: auth_service.py  email_service.py
backend/app/tools/: generate_server_keypair.py
backend/app/utils/: crypto.py  logging.py
backend/cmd/server/: main.go
backend/internal/auth/: handler.go
backend/internal/db/: db.go
backend/internal/files/: handler.go
backend/internal/middleware/: auth.go
backend/internal/models/: user.go
backend/routes/: audit_logs.py  files.py  users.py
backend/services/: audit_log_service.py  file_service.py  file_share_service.py  user_service.py
backend/utils/: crypto.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  pdfjs.d.ts  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: breadcrumb.tsx  dashboard-layout.tsx  file-grid.tsx  file-list.tsx  file-manager.tsx  filter-panel.tsx  logs.tsx  (+7 more)
(+10 files in other folders)
