[project]
name = "vaultx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.2",
    "fastapi[standard]>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
]
